examples/failing/NewtypeMultiParams.purs
module Main where

newtype Thing a b = Thing a b